# test

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: generate_sample.py  sample_log.csv
src/: config.py  models.py  some-new-file.py
tests/: test_helpers.py  test_models.py
utils/: helpers.py  logger.py
