[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "process-intelligence"
version = "8.0.0"
description = "A sample process intelligence Python project."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "process intelligence",
]
authors = [
    { name = "Lukas Schulze Balhorn", email = "l.schulzebalhorn@tudelft.nl" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.3.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/LukasSchBal/test"
Source = "https://github.com/LukasSchBal/test-dev"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "UP", "I", "E", "F"]
extend-ignore = [
    "E501", # line too long
]
isort = { combine-as-imports = true }

[tool.ruff.lint.pydocstyle]
convention = "numpy"
